--- a/css/styles.css
+++ b/css/styles.css
@@ -45,11 +45,11 @@ header {
 .section-title {
   transition: 0.3s ease;
 }
-/*End of Whole Website*/
+/*End of Whole Website*******************************************************/
 
 
 
-/*Header Section*/
+/*Header Section******************************************************/
 #header {
   position: fixed;
   z-index: 1000;
@@ -71,13 +71,13 @@ header {
   justify-content: space-between;
   width: 100%;
   height: 100%;
-  max-width: 1300px;
+  max-width: 1400px;
   padding: 0 10px;
 }
 
 #header .brand a {
   text-decoration: none;
-  color: white;
+  color: #B58E58;
   letter-spacing: 0.2rem;
 }
 #header .nav-list ul {
@@ -106,7 +106,7 @@ header {
   font-weight: 500;
   letter-spacing: .2rem;
   text-decoration: none;
-  color: white;
+  color: #B58E58;
   text-transform: uppercase;
   padding: 20px;
   display: block;
@@ -135,7 +135,7 @@ header {
   height: 60px;
   width: 60px;
   display: inline-block;
-  border: 3px solid white;
+  border: 3px solid #B58E58;
   border-radius: 50px;
   position: relative;
   display: flex;
@@ -144,14 +144,13 @@ header {
   z-index: 100;
   cursor: pointer;
   transform: scale(.8);
-  margin-right: 20px;
 }
 
 #header .hamburger .bar {
   height: 2px;
   width: 30px;
   position: relative;
-  background-color: white;
+  background-color: #B58E58;
   z-index: -1
 }
 
@@ -162,7 +161,7 @@ header {
   height: 100%;
   width: 100%;
   left: 0;
-  background-color: white;
+  background-color: #B58E58;
   transition: .3s ease;
   transition-property: top, bottom;
 }
@@ -181,13 +180,11 @@ header {
 #header .hamburger.active .bar::after {
   top: 0px;
 }
-
-
-/*End of Header Section*/
+/*End of Header Section*******************************************************/
 
 
 
-/*Home Section*/
+/*Home Section*******************************************************/
 #home {
   position: relative;
   z-index: 1;
@@ -200,7 +197,7 @@ header {
   left: 0;
   height: 100%;
   width: 100%;
-  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+  background-image: linear-gradient(60deg, #403B4A -20%, #E7E9BB 100%);
   opacity: .6;
   z-index: -1;
 }
@@ -217,7 +214,7 @@ header {
   width: fit-content;
   font-size: 4.4rem;
   position: relative;
-  color: white;
+  color: #B58E58;
   
 
 }
@@ -239,11 +236,11 @@ header {
   color: black;
   margin-top: 10px;
 }
-/*End Home Section*/
+/*End Home Section*******************************************************/
 
 
 
-/*About Me Section*/
+/*About Me Section*******************************************************/
 #about-me .about-me {
   flex-direction: column-reverse;
   text-align: center;
@@ -281,10 +278,61 @@ img.profile_pic {
  width: 100%;
  border-radius: 50%;
 }
-/*End of About Me Section*/
+/*End of About Me Section*******************************************************/
 
 
-/*Portfolio Section*/
+
+/*Skills Section*******************************************************/
+#skills .skills{
+  flex-direction: column;
+  text-align: center;
+  max-width: 1500px;
+  margin: 0 auto;
+  padding: 100px 0;
+}
+
+#skills .section-tile{
+  font-size: 4rem;
+  font-weight: 300;
+  color: black;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+#skills .skills-top p{
+  font-size: 1.4rem; 
+}
+
+#skills .skills-top {
+  max-width: 500px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+#skills .skills-bottom {
+  margin-top: 50px;
+  align-items: center;
+  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 30px;
+  
+}
+
+#skills .skills-item {
+  padding: 0px 30px;
+  
+}
+
+
+
+/*End of Skills Section*******************************************************/
+
+
+
+/*Portfolio Section*******************************************************/
 #portfolio .portfolio{
   flex-direction: column;
   text-align: center;
@@ -359,7 +407,7 @@ img.profile_pic {
 
 #portfolio .portfolio-item h2 {
   font-size: 2rem;
-  color: white;
+  color: #e4bf8d;
   margin-bottom: 10px;
   text-transform: uppercase;
 }
@@ -398,12 +446,26 @@ img.profile_pic {
   padding: 10px;
   letter-spacing: .4rem;
   margin: 25px auto;
+  cursor: pointer;
+  transition: transform 0.3s ease, font-weight 0.3s ease;
 }
-/*End of Portfolio Section*/
+
+#portfolio .portfolio-item .button a {
+  text-decoration: none;
+  height: 100%;
+  width: 100%;
+  color: black;
+}
+
+#portfolio .portfolio-item .button:hover {
+  transform: scale(1.1);
+  font-weight: bold;
+}
+/*End of Portfolio Section*******************************************************/
 
 
 
-/*Footer Section*/
+/*Footer Section*******************************************************/
 #footer {
   background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
 }
@@ -418,7 +480,7 @@ img.profile_pic {
 .brand h2 {
   font-size: 2rem;
   text-transform: uppercase;
-  color: white;
+  color: #B58E58;
 }
 
 #footer p:first-of-type {
@@ -439,24 +501,38 @@ img.profile_pic {
 
 #footer .social-icon {
   display: flex;
+  margin-top: 30px;
   margin-bottom: 30px;
+  transition: transform 0.25s ease;
+}
+
+#footer .social-icon:hover {
+  transform: scale(1.2);
 }
 
 #footer .social-item {
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
   margin: 0 5px;
 }
 
-/*End of Footer Section*/
+#footer .social-item img {
+  height: 100%;
+  width: 100%;
+}
+
+
+/*End of Footer Section*******************************************************/
 
 
 
-/*Animations*/
+/*Animations*******************************************************/
 
-/*End of Animations Section*/
+/*End of Animations Section*******************************************************/
 
-/*Media Query Tablet*/
+
+
+/*Media Query Tablet*******************************************************/
 @media only screen and (min-width:768px){
 
   h1.section-title {
@@ -474,15 +550,15 @@ img.profile_pic {
   #home p {
     font-size: 1.5rem;
   }
-  /*End of Home Section*/
+  /*End of Home Section*******************************************************/
 
-  /*About me Section*/
+  /*About me Section*******************************************************/
   .about-me p {
     font-size: 1.2rem;
   }
-  /*End of About me Section*/
+  /*End of About me Section*******************************************************/
 
-  /*Projects Section*/
+  /*Projects Section*******************************************************/
   #portfolio .portfolio-bottom .portfolio-item{
     flex-basis: 45%;
     margin: 1.5%;
@@ -492,9 +568,9 @@ img.profile_pic {
   #portfolio .portfolio-top {
     max-width: 600px;
   }
-  /*End of Projects Section*/
+  /*End of Projects Section*******************************************************/
 
-  /*About Me Section*/
+  /*About Me Section*******************************************************/
   #about-me .about-me {
     flex-direction: row;
   }
@@ -536,11 +612,15 @@ img.profile_pic {
     padding-left: 15px;
   }
 
-  /*End of About Me Section*/
-}
-/*End of Media Query Tablet*/
+  #skills .skills-bottom {
+    grid-template-columns: repeat(2, 1fr);
+  }
 
-/*Media Query For Desktop*/
+  /*End of About Me Section*******************************************************/
+}
+/*End of Media Query Tablet*******************************************************/
+
+/*Media Query For Desktop*******************************************************/
 @media only screen and (min-width:1200px){
 
   #header .hamburger {
@@ -566,6 +646,21 @@ img.profile_pic {
     display: none;
   }
 
+  #home:after {
+    background-image: linear-gradient(60deg, #403B4A 0%, #E7E9BB 100%);
+  }
+
+  #skills .skills-top {
+    max-width: 650px;
+  }
+
+  #skills .skills-bottom {
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 250px;
+    gap: 15px;
+  }
+
+
   #portfolio .portfolio-bottom .portfolio-item {
     flex-basis: 30%;
     margin: 1.5%;
@@ -577,5 +672,12 @@ img.profile_pic {
     max-width: 650px;
   }
 
+  #footer .social-item {
+    height: 50px;
+    width: 50px;
+    margin: 0 5px;
+  }
+
+
 }
-/*End of Media Query For Desktop*/
+/*End of Media Query For Desktop*******************************************************/
