--- a/css/styles.css
+++ b/css/styles.css
@@ -534,6 +534,92 @@ img.profile_pic {
 /*End of Footer Section*******************************************************/
 
 
+.faq{
+  width: 100%;
+  height: 100%;
+  background-color: #3c4053;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container {
+  width: 100%;
+  max-width: 60rem;
+  margin: 0 auto;
+  padding:  1.5rem 0;
+}
+
+.accordion {
+  padding-top: .4rem;
+}
+
+.accordion-item {
+  background-color: #283042;
+  border-radius: .4rem;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  box-shadow: .5rem 2px .5rem rgba(0,0,0,.1);
+}
+
+.accordion-link {
+  font-size: 1.6rem;
+  color: rgba(255,255,255,.8);
+  text-decoration: none;
+  background-color: #283042;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 0;
+}
+
+.accordion-link i {
+  color: #e7d5ff;
+  padding: .5rem;
+}
+
+.remove-circle-outline{
+  display: none;
+}
+
+.answer {
+  max-height: 0;
+  overflow: hidden;
+  position: relative;
+  color: rgba(255,255,255,.6);
+  background-color: #212838;
+  transition: max-height 650ms;
+}
+
+.answer::before {
+  content: '';
+  position: absolute;
+  width: .4rem;
+  height: 100%;
+  background-color: #B58E58;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+
+.answer p {
+  font-size: 1.25rem;
+  color: #fff;
+  padding: 1.3rem;
+}
+
+.accordion-item:target .answer {
+  max-height: 20rem;
+}
+
+.accordion-item:target .accordion-link .add-circle-outline {
+  display: none;
+}
+
+.accordion-item:target .accordion-link .remove-circle-outline {
+  display: block;
+}
 
 /*Animations*******************************************************/
 
