--- a/css/styles.css
+++ b/css/styles.css
@@ -543,7 +543,7 @@ img.profile_pic {
   justify-content: center;
 }
 
-.container {
+.faq .container {
   width: 100%;
   max-width: 60rem;
   margin: 0 auto;
