--- a/css/styles.css
+++ b/css/styles.css
@@ -206,7 +206,7 @@ header {
   max-width: 1200px;
   margin: 0 auto;
   padding: 15px;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
 #home h1 {
@@ -235,6 +235,10 @@ header {
   position: relative;
   color: black;
   margin-top: 10px;
+}
+
+.picture-books {
+  display:none;
 }
 /*End Home Section*******************************************************/
 
@@ -534,6 +538,7 @@ img.profile_pic {
 /*End of Footer Section*******************************************************/
 
 
+/*Beginning of Accordion Section*************************************************/
 .faq{
   width: 100%;
   height: 100%;
@@ -541,6 +546,7 @@ img.profile_pic {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 .faq .container {
@@ -620,6 +626,21 @@ img.profile_pic {
 .accordion-item:target .accordion-link .remove-circle-outline {
   display: block;
 }
+
+.return {
+  margin: 0 auto;
+  padding: 2.5rem 0 1.2rem 0;
+}
+
+.return a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.4rem;
+ 
+}
+/*End of Accordion Section*********************************************/
+
+
 
 /*Animations*******************************************************/
 
@@ -744,6 +765,20 @@ img.profile_pic {
   #home:after {
     background-image: linear-gradient(60deg, #3C3B3F 0%, #a0957d 120%);
   }
+
+  .picture-books {
+    margin-left: 200px;
+    width: 40%;
+    display: block;
+    position: relative;
+    
+  }
+
+  .picture-books img {
+    width: 100%;
+  }
+
+
 
   #skills .skills-top {
     max-width: 650px;
