--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ html {
   font-size: 15px;
   font-family: 'Montserrat', sans-serif;
   scroll-behavior: smooth;
+  /* scroll-snap-type: y mandatory; */
 }
 
 h1 {
@@ -24,7 +25,8 @@ h1 {
 }
 
 h2 {
-  font-family: "Cinzel", sans-serif;
+  font-family: "poppins", sans-serif;
+  
 }
 
 header {
@@ -44,6 +46,10 @@ header {
 
 .section-title {
   transition: 0.3s ease;
+}
+
+section:not(#header) {
+  scroll-snap-align: start;
 }
 /*End of Whole Website*******************************************************/
 
@@ -386,9 +392,9 @@ img.profile_pic {
   min-height: 400px;
   display: flex;
   align-items: flex-start;
-  justify-content: center;
+  
   flex-direction: column;
-  padding: 30px 30px 12px;
+  padding: 15px;
   border-radius: 10px;
   /*background-image: url(../_images/office.jpg);*/
   background-size: cover;
@@ -413,13 +419,13 @@ img.profile_pic {
 }
 
 #portfolio .portfolio-bottom .icon {
-  height: 100%;
+
   width: 100%;
   margin-bottom: 10px;
 }
 
 #portfolio .portfolio-item h2 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: #e4bf8d;
   margin-bottom: 10px;
   text-transform: uppercase;
@@ -458,6 +464,7 @@ img.profile_pic {
   text-decoration: none;
   background: white;
   padding: 10px;
+  border-radius: 20px;
   letter-spacing: .4rem;
   margin: 25px auto;
   cursor: pointer;
@@ -466,6 +473,7 @@ img.profile_pic {
 
 #portfolio .portfolio-item .button a {
   text-decoration: none;
+  font-family: poppins;
   height: 100%;
   width: 100%;
   color: black;
@@ -475,6 +483,15 @@ img.profile_pic {
   transform: scale(1.1);
   font-weight: bold;
 }
+
+#portfolio .portfolio-item .doc-image {
+  width: 100%;
+  height: 200px;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+
 /*End of Portfolio Section*******************************************************/
 
 
@@ -804,7 +821,10 @@ img.profile_pic {
     flex-basis: 30%;
     margin: 1.5%;
     max-height: 410px;
-    padding-top: 70px;
+  }
+
+  #portfolio .portfolio-item p {
+    height: 133px;
   }
 
   #portfolio .portfolio-top {
